--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@google/generative-ai": "^0.24.1",
     "lucide-react": "^0.556.0",
     "react": "^19.2.1",
-    "react-dom": "^19.2.1"
+    "react-dom": "^19.2.1",
+    "tesseract.js": "^7.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
