--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "lucide-react": "^0.556.0",
+    "onnxruntime-node": "^1.23.2",
+    "ppu-paddle-ocr": "^3.5.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
-    "tesseract.js": "^7.0.0"
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
